--- a/client/linechartWidget.html
+++ b/client/linechartWidget.html
@@ -42,7 +42,6 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div visualization-superclass implementation="multipleLayer" name="Line Chart" type="lineChart" class="multiple-table-visualization"  bindings="bindings" log-element-group="chart_group" log-element-type="linechart" visualization-id="{{visualizationId}}" state-id={{visualizationId}}></div>
         </div>
         <div id="tooltip-container"></div>
         <!-- In production use:
@@ -120,8 +119,12 @@
         <script type="text/javascript">
 
             var WidgetConfig = {
-                templateURL: 'dataSelectorWidget.html',
+                templateURL: 'linechartWidget.html',
                 namespace: 'com.ncc.neon.linechart',
+                name: 'Line Chart',
+                type: 'lineChart',
+                logElementGroup: 'chart_group',
+                logElementType: 'canvas',
                 theme: 'Dark Green',
                 demoModuleList: [
                     'neonDemo.controllers',
@@ -155,10 +158,6 @@
         <script src="app/theme.service.js"></script>
         <script src="app/translation.service.js"></script>
         <script src="app/visualization.service.js"></script>
-        <script  type="text/javascript">
-          
-
-        </script>
         <script src="components/addVisualization/addVisualization.directive.js"></script>
         <script src="components/aggregationTable/aggregationTable.controller.js"></script>
         <script src="components/barChart/barChart.controller.js"></script>
