--- a/client/aggregationTableWidget.html
+++ b/client/aggregationTableWidget.html
@@ -42,7 +42,6 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div visualization-superclass implementation="singleLayer" name="Aggregation Table" type="aggregationTable" class="single-table-visualization" active="active" bindings="bindings" log-element-group="table_group" log-element-type="table" visualization-id="{{visualizationId}}" state-id={{visualizationId}}></div>
         </div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -120,6 +119,10 @@
             var WidgetConfig = {
                 templateURL: 'aggregationTableWidget.html',
                 namespace: 'com.ncc.neon.aggregationtable',
+                name: 'Aggregation Table',
+                type: 'aggregationTable',
+                logElementGroup: 'table_group',
+                logElementType: 'datagrid',
                 theme: 'Dark Green',
                 demoModuleList: [
                     'neonDemo.controllers',
