--- a/client/mapWidget.html
+++ b/client/mapWidget.html
@@ -42,7 +42,6 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div visualization-superclass implementation="multipleLayer" name="Map" type="map" class="multiple-table-visualization" active="active" bindings="bindings" log-element-group="map_group" log-element-type="map" visualization-id="{{visualizationId}}" state-id="{{visualizationId}}"></div>
         </div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -120,6 +119,10 @@
         var WidgetConfig = {
                 templateURL: 'mapWidget.html',
                 namespace: 'com.ncc.neon.mapwidget',
+                name: 'Map',
+                type: 'map',
+                logElementGroup: 'map_group',
+                logElementType: 'canvas',
                 theme: 'Dark Green',
                 demoModuleList: [
                     'neonDemo.controllers',
