--- a/client/scatterPlotWidget.html
+++ b/client/scatterPlotWidget.html
@@ -42,7 +42,6 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div visualization-superclass implementation="singleLayer" name="Scatter Plot" type="scatterPlot" class="single-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="scatter" visualization-id="{{visualizationId}}" state-id="{{visualizationId}}"></div>
         </div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -120,6 +119,10 @@
          var WidgetConfig = {
                 templateURL: 'scatterPlotWidget.html',
                 namespace: 'com.ncc.neon.scatterplot',
+                name: 'Scatter Plot',
+                type: 'scatterPlot',
+                logElementGroup: 'chart_group',
+                logElementType: 'canvas',
                 theme: 'Dark Green',
                 demoModuleList: [
                     'neonDemo.controllers',
@@ -153,10 +156,6 @@
         <script src="app/theme.service.js"></script>
         <script src="app/translation.service.js"></script>
         <script src="app/visualization.service.js"></script>
-        <script  type="text/javascript">
-          
-
-        </script>
         <script src="components/addVisualization/addVisualization.directive.js"></script>
         <script src="components/aggregationTable/aggregationTable.controller.js"></script>
         <script src="components/barChart/barChart.controller.js"></script>
