--- a/client/newsFeedWidget.html
+++ b/client/newsFeedWidget.html
@@ -17,16 +17,8 @@
         <link rel="stylesheet" href="bower_components/ag-grid/dist/theme-fresh.css" />
         <link rel="stylesheet" href="bower_components/ag-grid/dist/theme-blue.css" />
         <link rel="stylesheet" href="bower_components/ag-grid/dist/theme-dark.css" />
-        <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" />
-        <link rel="stylesheet" href="bower_components/angular-gridster/dist/angular-gridster.min.css" />
-        <link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css" />
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <!-- endbower -->
-
-        <link rel="stylesheet" href="bower_components/angular-gantt/assets/angular-gantt.css" />
-        <link rel="stylesheet" href="bower_components/angular-gantt/assets/angular-gantt-plugins.css" />
-        <link rel="stylesheet" href="bower_components/jquery-ui/themes/ui-lightness/jquery-ui.css" />
-        <link rel="stylesheet" href="bower_components/jquery-ui/themes/ui-lightness/jquery.ui.theme.css" />
 
         <link rel="stylesheet" type="text/css" href="app/sprites.css">
         <!-- endbuild -->
@@ -56,57 +48,32 @@
              loaded first, angular should pick up the included jQuery. -->
         <script src="/neon/js/neon.js"></script>
 
-        <!-- Include OpenLayers outside the JS package because OpenLayers scans the index.html file for its own include to extract its relative path. -->
-        <script src="bower_components/openlayers/OpenLayers.js"></script>
-
-        <!-- Include and minify Plotly in its own JS package because of its huge size in order to quicken the initial dashboard load. -->
-        <!-- build:js(client) plotly.min.js -->
-        <script src="assets/vendor/plotly.js"></script>
-        <!-- endbuild -->
 
         <!-- build:js(client) app/lib.min.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/moment/moment.js"></script>
-        <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
-        <script src="bower_components/angular-moment/angular-moment.js"></script>
-        <script src="bower_components/angular-gridster/src/angular-gridster.js"></script>
         <script src="bower_components/angular-linkify/angular-linkify.js"></script>
         <script src="bower_components/angular-loader/angular-loader.js"></script>
         <script src="bower_components/angular-mocks/angular-mocks.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
-        <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="bower_components/d3/d3.js"></script>
-        <script src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
-        <script src="bower_components/jquery.tagcloud/jquery.tagcloud.js"></script>
         <script src="bower_components/js-yaml/dist/js-yaml.js"></script>
         <script src="bower_components/mustache/mustache.js"></script>
         <script src="bower_components/ngDraggable/ngDraggable.js"></script>
         <script src="bower_components/remarkable-bootstrap-notify/bootstrap-notify.js"></script>
         <!-- endbower -->
 
-        <script src="bower_components/angular-gantt/dist/angular-gantt.js"></script>
-        <script src="bower_components/angular-gantt/dist/angular-gantt-plugins.js"></script>
-
         <script src="bower_components/user-ale/helper-libs/javascript/userale.js"></script>
         <script src="bower_components/user-ale/helper-libs/javascript/userale-worker.js"></script>
 
-        <!-- Include the opencpu library. OpenCPU needs to be included after JQuery and before the app config. -->
-        <script src="bower_components/opencpu/opencpu-0.5.js"></script>
-
-        <!-- Include the ag-grid library after the angular library. -->
+         <!-- Include the ag-grid library after the angular library. -->
         <script src="bower_components/ag-grid/dist/ag-grid.js"></script>
 
         <!-- Include third party libs -->
-        <script src="bower_components/javascript-detect-element-resize/jquery.resize.js"></script>
-        <script src="bower_components/heatmapjs/build/heatmap.js"></script>
-        <script src="assets/vendor/openlayers-heatmapjs/heatmap-openlayers.js"></script>
-        <script src="bower_components/threedubmedia.jquery.event/event.drag/jquery.event.drag.js"></script>
-        <script src="bower_components/threedubmedia.jquery.event/event.drop/jquery.event.drop.js"></script>
         <script src="bower_components/jquery.linky/jquery.linky.js"></script>
-        <script src="bower_components/mergesort/merge-sort.js"></script>
+        <script src="bower_components/javascript-detect-element-resize/jquery.resize.js"></script>
         <script src="bower_components/rainbowvis.js/rainbowvis.js"></script>
         <!-- endbuild -->
 
@@ -130,18 +97,10 @@
                     'neonDemo.services',
                     'neonDemo.directives',
                     'neonDemo.filters',
-                    'gridster',
                     'ngDraggable',
                     'ngRoute',
-                    'ui.bootstrap.datetimepicker',
                     'linkify',
-
-                    'agGrid',
-
-                    'gantt',
-                    'gantt.tooltips',
-                    'gantt.tree',
-                    'gantt.groups'
+                    'agGrid'
                 ]
             };
             
@@ -158,58 +117,18 @@
         <script src="app/theme.service.js"></script>
         <script src="app/translation.service.js"></script>
         <script src="app/visualization.service.js"></script>
-        <script src="components/addVisualization/addVisualization.directive.js"></script>
-        <script src="components/aggregationTable/aggregationTable.controller.js"></script>
-        <script src="components/barChart/barChart.controller.js"></script>
-        <script src="components/barChart/barChart.js"></script>
-        <script src="components/dataTable/dataTable.controller.js"></script>
-        <script src="components/databaseConfig/databaseConfig.directive.js"></script>
-        <script src="components/datasetWizard/databaseStep.directive.js"></script>
-        <script src="components/datasetWizard/datastoreStep.directive.js"></script>
-        <script src="components/datasetWizard/fieldsStep.directive.js"></script>
-        <script src="components/datasetWizard/layoutStep.directive.js"></script>
-        <script src="components/datasetWizard/relationsStep.directive.js"></script>
-        <script src="components/datasetWizard/wizardTemplate.directive.js"></script>
         <script src="components/export/export.directive.js"></script>
         <script src="components/export/fileFormats.directive.js"></script>
-        <script src="components/filterBuilder/filterBuilder.directive.js"></script>
-        <script src="components/filterBuilder/filterTable.js"></script>
         <script src="components/filterNotification/filterNotification.directive.js"></script>
-        <script src="components/filterTray/filterTray.directive.js"></script>
-        <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
         <script src="components/layerOptions/layerOptions.directive.js"></script>
-        <script src="components/lineChart/lineChart.controller.js"></script>
-        <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
         <script src="components/linksPopup/linksPopup.service.js"></script>
         <script src="components/linksPopup/linksPopupButton.directive.js"></script>
-        <script src="components/map/coremap.js"></script>
-        <script src="components/map/heatmapLayer.js"></script>
-        <script src="components/map/map.controller.js"></script>
-        <script src="components/map/nodeLayer.js"></script>
-        <script src="components/map/pointsLayer.js"></script>
-        <script src="components/map/selectedPointsLayer.js"></script>
-        <script src="components/networkGraph/directedGraph.js"></script>
-        <script src="components/networkGraph/directedGraphMediator.js"></script>
-        <script src="components/networkGraph/networkGraph.controller.js"></script>
         <script src="components/newsFeed/newsFeed.controller.js"></script>
-        <script src="components/opsClock/circularHeatChart.js"></script>
-        <script src="components/opsClock/opsClock.controller.js"></script>
         <script src="components/optionsMenu/optionsMenu.directive.js"></script>
-        <script src="components/poweredByNeon/poweredByNeon.directive.js"></script>
-        <script src="components/sample/sample.controller.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
-        <script src="components/scatterPlot/scatterPlot.controller.js"></script>
-        <script src="components/sunburstChart/sunburst.js"></script>
-        <script src="components/sunburstChart/sunburstChart.controller.js"></script>
-        <script src="components/textCloud/textCloud.controller.js"></script>
-        <script src="components/timeline/dateBucketizer.js"></script>
-        <script src="components/timeline/monthBucketizer.js"></script>
-        <script src="components/timeline/timeline.controller.js"></script>
-        <script src="components/timeline/timelineSelectorChart.js"></script>
-        <script src="components/timeline/yearBucketizer.js"></script>
         <script src="components/translationOptions/translationOptions.directive.js"></script>
         <script src="components/visualization/visualizationDisplay.directive.js"></script>
         <script src="components/visualization/visualizationHeaders.directive.js"></script>
