--- a/client/index.html
+++ b/client/index.html
@@ -260,6 +260,7 @@
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
         <script src="components/layerOptions/layerOptions.directive.js"></script>
+        <script src="components/legend/legend.controller.js"></script>
         <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
