Changing some of the inter-widget messages to pass valid JSON objects rather than classes or functions.  Also refactored some of the code duplication in app.js/widget.js.  neonUtilities.js and neonGTDSetup.js pull most of the duplication into separate modules.

--- a/client/linechartWidget.html
+++ b/client/linechartWidget.html
@@ -39,7 +39,7 @@
 
         <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
              loaded first, angular should pick up the included jQuery. -->
-        <script src="assets/vendor/owf-widget-debug.js"></script>
+        <script src="assets/vendor/owf-widget-min.js"></script>
 
         <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
              loaded first, angular should pick up the included jQuery. -->
@@ -75,6 +75,8 @@
         <!-- build:js(client) app/app.min.js -->
         <!-- injector:js -->
         <script src="app/namespaces.js"></script>
+        <script src="app/neonUtilities.js"></script>
+        <script src="app/neonGTDSetup.js"></script>
          <!-- Setup our widget's OWF handlers and trigger the angular code -->
         <script type="text/javascript">
 
@@ -114,6 +116,9 @@
         <script src="components/filterNotification/filterNotification.directive.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
+        <script src="components/timeline/dateBucketizer.js"></script>
+        <script src="components/timeline/monthBucketizer.js"></script>
+        <script src="components/timeline/yearBucketizer.js"></script>
         <script src="components/layerOptions/layerOptions.directive.js"></script>
         <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
