--- a/client/index.html
+++ b/client/index.html
@@ -226,6 +226,8 @@
         <!-- build:js(client) app/app.min.js -->
         <!-- injector:js -->
         <script src="app/namespaces.js"></script>
+        <script src="app/neonUtilities.js"></script>
+        <script src="app/neonGTDSetup.js"></script>
         <script src="app/app.js"></script>
         <script src="app/connection.service.js"></script>
         <script src="app/dataset.service.js"></script>
