--- a/client/networkGraphWidget.html
+++ b/client/networkGraphWidget.html
@@ -39,7 +39,7 @@
 
         <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
              loaded first, angular should pick up the included jQuery. -->
-        <script src="assets/vendor/owf-widget-debug.js"></script>
+        <script src="assets/vendor/owf-widget-min.js"></script>
 
         <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
              loaded first, angular should pick up the included jQuery. -->
@@ -75,6 +75,8 @@
         <!-- build:js(client) app/app.min.js -->
         <!-- injector:js -->
         <script src="app/namespaces.js"></script>
+        <script src="app/neonUtilities.js"></script>
+        <script src="app/neonGTDSetup.js"></script>
          <!-- Setup our widget's OWF handlers and trigger the angular code -->
         <script type="text/javascript">
             var WidgetConfig = {
@@ -117,14 +119,14 @@
         <script src="components/linksPopup/linksPopup.directive.js"></script>
         <script src="components/linksPopup/linksPopup.service.js"></script>
         <script src="components/linksPopup/linksPopupButton.directive.js"></script>
+        <script src="components/timeline/dateBucketizer.js"></script>
+        <script src="components/timeline/monthBucketizer.js"></script>
+        <script src="components/timeline/yearBucketizer.js"></script>
         <script src="components/networkGraph/directedGraph.js"></script>
         <script src="components/networkGraph/directedGraphMediator.js"></script>
         <script src="components/networkGraph/networkGraph.controller.js"></script>
         <script src="components/optionsMenu/optionsMenu.directive.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
-        <script src="components/timeline/dateBucketizer.js"></script>
-        <script src="components/timeline/monthBucketizer.js"></script>
-        <script src="components/timeline/yearBucketizer.js"></script>
         <script src="components/translationOptions/translationOptions.directive.js"></script>
         <script src="components/visualization/visualizationDisplay.directive.js"></script>
         <script src="components/visualization/visualizationHeaders.directive.js"></script>
