THOR-102 THOR-103 Created the Document Viewer visualization to show highlighted text.  Required minor changes to Visualization Superclass API.

--- a/client/index.html
+++ b/client/index.html
@@ -250,6 +250,7 @@
         <script src="components/datasetWizard/layoutStep.directive.js"></script>
         <script src="components/datasetWizard/relationsStep.directive.js"></script>
         <script src="components/datasetWizard/wizardTemplate.directive.js"></script>
+        <script src="components/documentViewer/documentViewer.controller.js"></script>
         <script src="components/export/export.directive.js"></script>
         <script src="components/export/fileFormats.directive.js"></script>
         <script src="components/filterBuilder/filterBuilder.directive.js"></script>
