Renaming one of the helper files and updating the appropriate widget links.

--- a/client/aggregationTableWidget.html
+++ b/client/aggregationTableWidget.html
@@ -79,7 +79,7 @@
         <!-- build:js(client) app/app.min.js -->
         <!-- injector:js -->
         <script src="app/namespaces.js"></script>
-        <script src="app/neonUtilities.js"></script>
+        <script src="app/neon.helpers.js"></script>
         <script src="app/neonGTDSetup.js"></script>
          <!-- Setup our widget's OWF handlers and trigger the angular code -->
         <script type="text/javascript">
