Updating library versions and replacing older lodash methods with current equivalents.

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
         <!-- OpenLayers will automatically add the link for its style during runtime if it can't find it in the index.html file even if it's included in the CSS package.  Put the link here so the style is defined before the Neon Dashboard style. -->
         <link rel="stylesheet" href="bower_components/openlayers/theme/default/style.css" />
 
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
         <!-- build:css app/app.min.css -->
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/ag-grid/dist/ag-grid.css" />
@@ -20,7 +22,6 @@
         <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" />
         <link rel="stylesheet" href="bower_components/angular-gridster/dist/angular-gridster.min.css" />
         <link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css" />
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <!-- endbower -->
 
         <link rel="stylesheet" href="bower_components/angular-gantt/assets/angular-gantt.css" />
@@ -196,7 +197,6 @@
         <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="bower_components/d3/d3.js"></script>
-        <script src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
         <script src="bower_components/jquery.tagcloud/jquery.tagcloud.js"></script>
         <script src="bower_components/js-yaml/dist/js-yaml.js"></script>
         <script src="bower_components/lodash/lodash.js"></script>
