Updating some dev tool versions and the reference to neon.js

--- a/client/index.html
+++ b/client/index.html
@@ -172,7 +172,7 @@
         <script src="bower_components/postal/lib/postal.js"></script>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <!-- endbuild -->
-        <script src="/neon/js/neon-nodeps.min.js"></script>
+        <script src="https://s3.amazonaws.com/neonframework.org/neon/versions/latest/neon-nodeps.js"></script>
 
         <!-- Include OpenLayers outside the JS package because OpenLayers scans the index.html file for its own include to extract its relative path. -->
         <script src="bower_components/openlayers/OpenLayers.js"></script>
